fix search interface x overflow

--- a/app/assets/stylesheets/api/listings.scss
+++ b/app/assets/stylesheets/api/listings.scss
@@ -192,12 +192,12 @@ body h4 {
 
   .search-panel {
     border-bottom: 1px solid #dce0e0;
-    padding: 10px 0;
+    padding: 10px 15px;
     margin: 0;
     background-color: white;
 
     .panel-section {
-      padding: 15px 20px;
+      padding: 15px;
       position: relative;
 
       .col-md-2 {
